Fixed span background overlap when broken into two lines

--- a/src/assets/scss/site/components/_index.photography.scss
+++ b/src/assets/scss/site/components/_index.photography.scss
@@ -25,6 +25,12 @@
         span {
             @extend %type-background;
         }
+        &.heading {
+            span {
+                display: inline-block;
+                margin-bottom: rem-calc(6);
+            }
+        }
         &.subheader {
             font-size:rem-calc(22);
             // background: rgba(lighten($brown, 5%), 0.8);
